--- a/index.html
+++ b/index.html
@@ -3,36 +3,96 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Exhibit001 Fashion</title>
+  <title>Fashion Looks | Exhibit001</title>
   <link rel="canonical" href="https://exhibit001.fashion/" />
-  <meta name="description" content="Explore the handmade garments and fashion innovations of Exhibit001." />
-  <meta name="keywords" content="Exhibit001 fashion, handmade clothes, unique jeans, fashion archive, S!CK" />
+
+  <!-- ✅ SEO Meta -->
+  <meta name="description" content="Exhibit001's signature looks — explore the final, styled outcomes of each handmade garment in full fashion form." />
+  <meta name="keywords" content="Exhibit001 fashion, styled looks, handmade fashion, streetwear archive, NYC alternative clothing" />
   <meta name="author" content="Exhibit001" />
-  <meta property="og:title" content="Exhibit001 — Fashion Archive" />
-  <meta property="og:description" content="Preview the fashion lineup from Exhibit001, launching soon." />
+
+  <!-- ✅ Open Graph -->
+  <meta property="og:title" content="Fashion Looks | Exhibit001" />
+  <meta property="og:description" content="Discover styled visuals of Exhibit001’s handmade clothing. Photographed and filmed fashion drops from NYC." />
   <meta property="og:image" content="https://exhibit001.com/cover.jpg" />
   <meta property="og:url" content="https://exhibit001.fashion" />
   <meta property="og:type" content="website" />
+
+  <!-- ✅ Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "Exhibit001 Fashion Looks",
+    "url": "https://exhibit001.fashion",
+    "description": "Explore full-look styled visuals from Exhibit001’s fashion archive — captured in NYC with artistic direction.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "Exhibit001"
+    }
+  }
+  </script>
+
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
   <style>
-    html, body {
+    body {
+      margin: 0;
       background: black;
       color: white;
-      font-family: 'Press Start 2P', monospace;
+      font-family: 'Press Start 2P', cursive;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      height: 100vh;
+      justify-content: center;
+      min-height: 100vh;
       text-align: center;
       padding: 20px;
-      margin: 0;
     }
+
     h1 {
       font-size: 18px;
+      margin-bottom: 40px;
+      text-shadow: 0 0 4px #0ff;
+    }
+
+    .fashion-preview {
+      border: 3px dotted white;
+      padding: 36px;
+      max-width: 480px;
+      width: 100%;
+    }
+
+    .fashion-preview p {
+      font-size: 12px;
+      line-height: 1.8;
+    }
+
+    .placeholder-media {
+      margin-top: 24px;
+      width: 100%;
+      aspect-ratio: 4 / 5;
+      background: #111;
+      border: 2px solid #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #aaa;
+      font-size: 10px;
+    }
+
+    @media (min-width: 600px) {
+      h1 { font-size: 28px; }
+      .fashion-preview p { font-size: 14px; }
+      .placeholder-media { font-size: 14px; }
     }
   </style>
 </head>
 <body>
-  <h1>🧵 FASHION PREVIEW COMING SOON</h1>
+  <h1>🧵 Fashion Looks Coming Soon</h1>
+  <div class="fashion-preview">
+    <p>Styled shots of Exhibit001 garments will appear here. Full looks, textures, and moments — captured in the streets of NYC.</p>
+    <div class="placeholder-media">[ LOOK IMAGE / VIDEO ]</div>
+  </div>
 </body>
 </html>
